# Learn-Generative-AI

./: .gitignore
03_GPTs-Bootcamp/02_SQL_Model/: main_engine.py  main_orm.py
03_GPTs-Bootcamp/02_SqlModel/: .env
03_GPTs-Bootcamp/03_SqlModel_API/: pyproject.toml
03_GPTs-Bootcamp/03_SqlModel_API/sqlmodel_api/: connect.py  main.py  models.py
03_chatgpt/001_hello_world/: helloworld.ipynb
03_chatgpt/002_multiple_roles/: multiple_roles.ipynb
03_chatgpt/003_streaming_response/: streaming.ipynb
03_chatgpt/05_function_calling/: function_calling.ipynb
03_chatgpt/07_assistants_knowledge_retrieval/: knowledge_retrieval.ipynb
03_chatgpt/08_assistants_function_calling/: assistant_functions.ipynb
06_chatgpt/001_hello_world/: helloworld.ipynb
06_chatgpt/003_streaming_response/: streaming.ipynb
06_chatgpt/010_fine_tuning/: code.ipynb  data.jsonl
06_chatgpt/04_json_mode/: json_response.ipynb
06_chatgpt/05_function_calling/: extra.py  function_calling.ipynb
06_chatgpt/06_assistants_code_interpreter/: assistants_code_interpreter.ipynb
07_UI_Streamlit/00_hello_world/: Recording.m4a  code.py
10_Event_Driven_Architecture_KAFKA/04_Kafka_Messaging/01_create_topic_through_bash/todo/: pyproject.toml
10_Event_Driven_Architecture_KAFKA/04_Kafka_Messaging/01_create_topic_through_bash/todo/app/: main.py
11_Container_Authentication/00_Generate_Access_Token/auth_service/: Dockerfile  pyproject.toml
11_Container_Authentication/00_Generate_Access_Token/auth_service/app/: main.py
12_OpenAI_Agents_SDK/: .env
regex/: intro.ipynb
(+130 files in other folders)
