[tool.poetry]
name = "03-sqlmodel-api"
version = "0.1.0"
description = ""
authors = ["Talha <talhakhalid411@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version="0.111.0",extras=["all"]}
sqlmodel = {version="0.0.18",extras=["all"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
