[tool.poetry]
name = "microservice"
version = "0.1.0"
description = ""
authors = ["Talha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.2"}
aiokafka = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
